--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
+    "swr": "^1.3.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
