--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
-    "sass": "^1.50.0",
+    "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "miragejs": "^0.1.43"
   }
 }
